@@ -1067,3 +1067,6 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
 2006-12-06 Damien Douxchamps<ddouxchamps@users.sf.net>
     * SVN 333: fixed a bug in absolute settings. The caching of offsets has
       been removed (Don Murray)
+	
+2006-12-07 Damien Douxchamps<ddouxchamps@users.sf.net>
+    * SVN 334: Fixed memory leak in Linux capture code (Fabien Spindler)
